--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "PPK",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
+  "name": "PPK",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "algoliasearch": "^3.21.1",
     "assign-deep": "^0.4.5",
     "immutable": "^3.8.1",
     "linkify-it": "^2.0.3",
@@ -22,6 +23,7 @@
     "react-native-image-picker": "^0.26.0",
     "react-native-image-resizer": "^0.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.7",
+    "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-navbar": "^1.6.2",
     "react-native-scrollable-tab-view": "^0.7.2",
@@ -37,10 +39,9 @@
     "reduxsauce": "^0.4.1",
     "remote-redux-devtools": "^0.5.7",
     "seamless-immutable": "^7.0.1",
-    "style-equal": "^1.0.0",
-		"react-native-maps": "^0.13.0"
-	},
-	"devDependencies": {
+    "style-equal": "^1.0.0"
+  },
+  "devDependencies": {
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "eslint": "^3.17.0",
@@ -50,8 +51,8 @@
     "eslint-plugin-react": "^6.10.0",
     "jest": "19.0.2",
     "react-test-renderer": "~15.4.1"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
