Updating the source code with making the skeleton of redux

--- a/ios/PPK/Info.plist
+++ b/ios/PPK/Info.plist
@@ -24,6 +24,10 @@
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>This is the plist item for NSLocationWhenInUseUsageDescription</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>This is the plist item for NSLocationAlwaysUsageDescription</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
