--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-addons-shallow-compare": "^15.4.2",
     "react-motion": "^0.4.7",
     "react-native": "0.42.0",
+    "react-native-android-location-services-dialog-box": "^1.2.0",
     "react-native-elements": "^0.9.7",
     "react-native-hyperlink": "0.0.8",
     "react-native-i18n": "^1.0.0",
     "react-native-image-picker": "^0.26.0",
     "react-native-image-resizer": "^0.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.2.7",
+    "react-native-location": "^0.27.0",
     "react-native-maps": "^0.13.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-navbar": "^1.6.2",
