--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-motion": "^0.4.7",
     "react-native": "0.42.0",
     "react-native-android-location-services-dialog-box": "^1.2.0",
+    "react-native-cached-image": "^1.2.5",
     "react-native-elements": "^0.9.7",
     "react-native-hyperlink": "0.0.8",
     "react-native-i18n": "^1.0.0",
